# DiffAlgoEval

./: .gitmodules  CMakeLists.txt  DiffAlgoEval.code-workspace  DiffAlgoEval.h  DiffAlgoEval.ui  README.md  main.cpp
algo/mock_algo/: CMakeLists.txt  mock_algo.cpp  mock_algo.h
algo_wrapper/: base_algo_wrapper.h
doc/: build.md
resources/: photosurface.rc
